--- a/Tube_Selector.rc
+++ b/Tube_Selector.rc
@@ -79,21 +79,20 @@ MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LIST2,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,153,56,164,154
-    EDITTEXT        IDC_EDIT_ROD_NUMBER,205,223,40,14,ES_AUTOHSCROLL,WS_EX_STATICEDGE
-    GROUPBOX        "Изменение площади стержня",IDC_STATIC,153,210,164,40
-    PUSHBUTTON      "+",IDC_BUTTON_ADD,243,222,37,16,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "-",IDC_BUTTON_SUBSTRACT,280,222,37,16,0,WS_EX_STATICEDGE
-    LTEXT           "№ стержня",IDC_STATIC,160,226,40,8
+    EDITTEXT        IDC_EDIT_ROD_NUMBER,200,217,40,14,ES_AUTOHSCROLL,WS_EX_STATICEDGE
+    PUSHBUTTON      "+",IDC_BUTTON_ADD,242,217,36,15,0,WS_EX_STATICEDGE
+    PUSHBUTTON      "-",IDC_BUTTON_SUBSTRACT,277,217,36,15,0,WS_EX_STATICEDGE
+    LTEXT           "Изменение площади стержня №",IDC_STATIC,86,220,114,8
     LTEXT           "Стандарт",IDC_STATIC,29,32,36,8
     LTEXT           "Имя файла сортамента",IDC_STATIC,8,19,78,8
     LTEXT           "Имя файла",IDC_STATIC,29,7,37,8
     EDITTEXT        IDC_EDIT_FILE_NAME,95,7,116,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_SORTAMENT_FILE_NAME,95,19,116,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_STANDART,95,31,116,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_LAMBDA,291,19,26,15,ES_CENTER | ES_AUTOHSCROLL | ES_READONLY
     CONTROL         IDB_BITMAP1,IDC_STATIC,"Static",SS_BITMAP | SS_REALSIZEIMAGE,270,19,18,15,WS_EX_STATICEDGE
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,8,56,115,154
-    PUSHBUTTON      "Подбор",IDC_BUTTON_SELECT,73,222,50,14,BS_CENTER | NOT WS_VISIBLE,WS_EX_STATICEDGE
+    PUSHBUTTON      "Подбор",IDC_BUTTON_SELECT,8,210,50,14,BS_CENTER | NOT WS_VISIBLE,WS_EX_STATICEDGE
+    EDITTEXT        IDC_EDIT_SORTAMENT_FILE_NAME2,95,31,116,12,ES_AUTOHSCROLL
 END
 
 HIDD_DIALOG1 DIALOGEX 0, 0, 256, 194
